# WaterSurface

./: .gitignore  CMakeLists.txt
src/: CallBacks.cpp  ControlPoint.cpp  SimpleMesh.h  SimpleModel.h  Track.cpp  TrainView.cpp  TrainWindow.H  TrainWindow.cpp  WaterView.H  WaterView.cpp  mesh.h  model.h  water.h
src/RenderUtilities/: Shader.h  Texture.h  Vertex.h
src/Utilities/: 3DUtils.cpp
src/shaders/: drop.frag  height_map.frag  height_map.vert  normal.frag  simple.frag  simple.vert  sinewave.frag  sinewave.vert  skybox.frag  skybox.vert  tiles.frag  tiles.vert  update.frag  vertex.vert  water.frag  water.vert
